Sat Jun  1 15:38:40 2002  Steve Huston  <shuston@riverace.com>

        * ace/Asynch_Acceptor.cpp (open): bind_port is in ACE_Sock_Connect,
          not ACE.
          Added #include "ace/SOCK_Stream.h" that class is also used, and
          #include "ace/Log_Msg.h" to get the ACE_ERROR macros.

        * ace/Asynch_Connector.cpp (handle_connect): clr_flags() is in
          ACE_Flag_Manip, not ACE.
          Added #include "ace/Log_Msg.h" to get ACE_ERROR macros.

Fri May 31 13:35:41 2002  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv2/TPC_Logging_Server.{h cpp}:
        * examples/C++NPv2/AC_Client_Logging_Daemon.cpp:
          Primarily formatting changes to match the book.

        * examples/C++NPv2/SLDex.mak: Removed Logging_Acceptor_Ex from
          files list; it's only a header file.

Fri May 31 11:07:25 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* examples/C++NPv2/AC_Client_Logging_Daemon.cpp: Modified this 
	  so use pointers rather than references to simplify things in
	  the book.

Thu May 30 23:03:38 2002  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv2/SR_Configurable_Logging_Server.{cpp mak}:
        * examples/C++NPv2/Makefile: Added new ACE_Select_Reactor-based
          configurable logging server.

        * examples/C++NPv2/AC_Client_Logging_Daemon.cpp: Code changes
          to match book and fix reconnect problems.

Thu May 30 18:02:35 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/OS.h: Changed EACESS to EACCES to be POSIX compliant.  Thanks
	  to Eric Eide <eeide@cs.utah.edu> for (re)reporting this!

Thu May 30 10:01:12 2002  Ossama Othman  <ossama@uci.edu>

	* ace/UPIPE_Stream.h (ACE_UPIPE_Stream):

	  Added missing PEER_ADDR trait.

Thu May 30 16:45:10 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	[Bug 1208]
	* ace/OS_String.inl (strstr): Remove wcswcs(), use wcsstr()
	instead.

Thu May 30 9:15:19 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>
  