@@ -1,5 +1,8 @@
 static Service_Reporter "-p $SERVICE_REPORTER_PORT"
 
+dynamic AIO_Client_Logging_Daemon Service_Object *
+AIO_CLD:_make_AIO_Client_Logging_Daemon()
+  "-p 7777"
+
 dynamic Server_Logging_Daemon Service_Object *
-SLD:_make_Server_Logging_Daemon()
-  "$SERVER_LOGGING_DAEMON_PORT"
+TPCLS:_make_TPC_Logging_Server()
